<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tads.eaj.com.sharkbehavior.RealizaObservacaoActivity"
    android:useDefaultMargins="true"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/observadores"
            android:id="@+id/labelObservadoresTextView"
            android:hint="@string/num_pessoas"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/capturar"
            android:id="@+id/capturarCameraButton"
            android:hint="@string/capturar" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/num_pessoas"
            android:id="@+id/valorObservadoresTextView"
            android:layout_gravity="center" />

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/observadoresSeekBar"
            android:layout_gravity="fill_horizontal|center"
            android:progress="25"
            android:max="50" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/indique_o_local_onde_o_tubar_o_se_localiza"
        android:id="@+id/labelLocalTubaraoTextView"
        android:padding="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clicaLocalTubarao"
            android:src="@drawable/agua"
            android:id="@+id/imageView1"
            android:contentDescription="@string/posi_o_1_ou_noroeste" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/agua"
            android:onClick="clicaLocalTubarao"
            android:id="@+id/imageView2"
            android:contentDescription="@string/posi_o_2_ou_norte" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/agua"
            android:onClick="clicaLocalTubarao"
            android:id="@+id/imageView3"
            android:contentDescription="@string/posi_o_3_ou_nordeste" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/agua"
            android:onClick="clicaLocalTubarao"
            android:id="@+id/imageView4"
            android:contentDescription="@string/posi_o_4_ou_oeste" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pedra"
            android:onClick="clicaLocalTubarao"
            android:id="@+id/imageView5"
            android:contentDescription="@string/posi_o_5_ou_centro" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/agua"
            android:onClick="clicaLocalTubarao"
            android:id="@+id/imageView6"
            android:contentDescription="@string/posi_o_6_ou_leste" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/agua"
            android:onClick="clicaLocalTubarao"
            android:id="@+id/imageView7"
            android:contentDescription="@string/posi_o_7_ou_sudoeste" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/agua"
            android:onClick="clicaLocalTubarao"
            android:id="@+id/imageView8"
            android:contentDescription="@string/posi_o_8_ou_sul" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/agua"
            android:onClick="clicaLocalTubarao"
            android:id="@+id/imageView9"
            android:contentDescription="@string/posi_o_9_ou_sudeste" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/indique_o_comportamento_do_tubar_o"
        android:id="@+id/labelComportamentoTextView"
        android:padding="5dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:id="@+id/radiogroup"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parado"
            android:id="@+id/paradoRadioButton"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nadando"
            android:id="@+id/nadandoRadioButton"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/outras_observacoes"
        android:id="@+id/labelComentariosTextView"
        android:layout_gravity="fill_horizontal|center_horizontal"
        android:hint="@string/outras_observacoes"
        android:padding="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="3"
        android:ems="10"
        android:id="@+id/cometatariosEditText"
        android:layout_gravity="fill_horizontal"
        android:gravity="start" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_observacao"
        android:onClick="cadastrarObservacaoClick"
        android:id="@+id/cadastrarObservacaoButton"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
