<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tads.eaj.com.sharkbehavior.LoginBolsistaActivity"
    android:gravity="center_vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/semusuario"
        android:onClick="clickLogin"
        android:contentDescription="@string/imagem_de_login" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login"
            android:id="@+id/labelTextViewLogin"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextUsername"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/senha"
            android:id="@+id/labelTextViewSenha"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword"
            android:layout_gravity="fill_horizontal"
            />
    </GridLayout>

    <Button
        android:layout_width="@dimen/button_width_verylarge"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:id="@+id/botaoEntrar"
        android:layout_gravity="center_horizontal"
        android:onClick="clickLogin"
        android:layout_weight="0"
        android:padding="20dp"
        android:hint="@string/entrar" />

    <Button
        android:layout_width="@dimen/button_width_verylarge"
        android:layout_height="wrap_content"
        android:text="@string/fechar"
        android:onClick="clickFechar"
        android:id="@+id/botaoFechar"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="0"
        android:padding="20dp"
        android:hint="@string/fechar" />

</LinearLayout>
